<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings_page_help"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/help_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_horizontal"
        android:background="@color/cast_expanded_controller_ad_label_background_color" />

    <TextView
        android:id="@+id/textViewHelpButton"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/help_background"
        android:fontFamily="casual"
        android:padding="5dp"
        android:text="@string/helpButtonHelpText"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/homeButtonHelpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="false"
        android:background="@drawable/help_background"
        android:fontFamily="casual"
        android:padding="5dp"
        android:text="@string/homeButtonHelpText"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_alignBottom="@+id/textViewHelpButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/backButtonHelpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:background="@drawable/help_background"
        android:fontFamily="casual"
        android:padding="5dp"
        android:text="@string/backButtonHelpText"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/menuButtonHelpText"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewHelpButton"
        android:layout_alignBottom="@+id/textViewHelpButton"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dp"
        android:background="@drawable/help_background"
        android:fontFamily="casual"
        android:padding="5dp"
        android:text="@string/menuButtonHelpText"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/deleteButtonHelpText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/backButtonHelpText"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="29dp"
        android:background="@drawable/help_background"
        android:fontFamily="casual"
        android:padding="5dp"
        android:text="@string/deleteButtonHelpText"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/infoHelp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/homeButtonHelpText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:background="@drawable/help_background"
        android:fontFamily="casual"
        android:padding="5dp"
        android:text="@string/infoHelpText"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>