<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_overlay"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:id="@+id/home_page_menu_wishlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:clickable="true"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/home_page_menu_wishlist"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textStyle="bold" />

    <View
        android:layout_width="300dp"
        android:layout_height="2dip"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/cast_abc_scrubber_control_to_pressed_mtrl_000" />

    <TextView
        android:id="@+id/home_page_menu_beento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:clickable="true"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/home_page_menu_beento"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textStyle="bold" />

    <View
        android:layout_width="300dp"
        android:layout_height="2dip"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/cast_abc_scrubber_control_to_pressed_mtrl_000" />

    <TextView
        android:id="@+id/home_page_menu_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:clickable="true"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/home_page_menu_history"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textStyle="bold" />

    <View
        android:layout_width="300dp"
        android:layout_height="2dip"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/cast_abc_scrubber_control_to_pressed_mtrl_000" />

    <TextView
        android:id="@+id/home_page_menu_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:clickable="true"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/home_page_menu_settings"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textStyle="bold" />

</LinearLayout>