<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.a1401061.eatnear.SettingsPage">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/activity_header_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"></include>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/noOfWishlistTxt"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:paddingRight="10dp"
                android:text="@string/noOfWishlistTxt"
                android:textAlignment="textEnd"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/noOfWishlistNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:paddingLeft="10dp"
                android:textAlignment="viewStart"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/noOfBeenToTxt"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:paddingRight="10dp"
                android:text="@string/noOfBeenToTxt"
                android:textAlignment="textEnd"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/noOfBeenToNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:paddingLeft="10dp"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/noOfHistoryTxt"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:paddingRight="10dp"
                android:text="@string/noOfHistoryTxt"
                android:textAlignment="textEnd"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/noOfHistoryNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:paddingLeft="10dp"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/backButton"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:layout_marginBottom="12dp"
        android:background="@drawable/delete_button"
        android:padding="15dp"
        android:text="@string/delete_button"
        android:textAlignment="center"
        android:textColor="@color/cast_expanded_controller_text_color"
        android:textSize="32sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/backButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="175dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="bottom|center"
        android:gravity="center"
        android:text="@string/back_button"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>
